--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,8 @@
 [buildout]
 parts = env ipython
 
+find-links = https://github.com/shomah4a/sphinx-tweet-embeded/tags
+
 
 [env]
 recipe = zc.recipe.egg
@@ -11,6 +13,9 @@ eggs =
      sphinx
      tinkerer
      sphinxcontrib-blockdiag
+     sphinx-tweet-embeded
+
+
 
 interpreter = python
 
