--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 parts = env ipython
 
-find-links = https://github.com/shomah4a/sphinx-tweet-embeded/tags
+find-links = https://github.com/shomah4a/sphinx-tweet-embed/tags
 
 
 [env]
@@ -13,7 +13,7 @@ eggs =
      sphinx
      tinkerer
      sphinxcontrib-blockdiag
-     sphinx-tweet-embeded
+     sphinx-tweet-embed
 
 
 
