--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,6 @@
 [buildout]
 parts = env ipython
 
-find-links = https://github.com/shomah4a/sphinx-tweet-embed/tags
-
-
 [env]
 recipe = zc.recipe.egg
 
@@ -13,7 +10,9 @@ eggs =
      sphinx
      tinkerer
      sphinxcontrib-blockdiag
-     sphinx-tweet-embed
+     sphinxcontrib.gist
+     sphinxcontrib.twitter
+     sphinx-amazonjp-embed
 
 
 
