--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,6 +12,7 @@ eggs =
      sphinxcontrib-blockdiag
      sphinxcontrib.gist
      sphinxcontrib.twitter
+     sphinxcontrib.youtube
      sphinx-amazonjp-embed
 
 
